Modification pour les projections t-SNE et UMAP pour rendre les graphiques plus clairs

--- a/Project_ML.ipynb
+++ b/Project_ML.ipynb
@@ -290,7 +290,7 @@
    "id": "9bb0fd2b",
    "metadata": {},
    "source": [
-    "Maintenant qu'on a extrait les features, on peut visualiser les données"
+    "================ II. Maintenant qu'on a extrait les features, on peut visualiser les données =============="
    ]
   },
   {
@@ -298,7 +298,7 @@
    "id": "ce0efcb6",
    "metadata": {},
    "source": [
-    "Répartition des types d'insectes et des espèces"
+    "================= Répartition des types d'insectes et des espèces ===================="
    ]
   },
   {
@@ -342,7 +342,7 @@
    "id": "44a7fe9f",
    "metadata": {},
    "source": [
-    "Ici On effectue une projection PCA sur les features extraites"
+    "========== Ici On effectue une projection PCA sur les features extraites ============="
    ]
   },
   {
@@ -471,15 +471,32 @@
    "outputs": [],
    "source": [
     "tsne = TSNE(n_components=2, perplexity=30, random_state=0)\n",
-    "tsne_projected = tsne.fit_transform(centered_data)\n",
+    "tsne_projected = tsne.fit_transform(numeric_df)\n",
     "\n",
-    "plt.figure(figsize=(8,6))\n",
-    "plt.scatter(tsne_projected[:, 0], tsne_projected[:, 1], color='red', alpha=0.5)\n",
-    "plt.title(\"t-SNE projection of features\")\n",
-    "plt.xlabel(\"t-SNE 1\")\n",
-    "plt.ylabel(\"t-SNE 2\")\n",
+    "tsne_df = pd.DataFrame({\n",
+    "    't-SNE 1': tsne_projected[:, 0],\n",
+    "    't-SNE 2': tsne_projected[:, 1],\n",
+    "    'bug type': df_class['bug type'].values\n",
+    "})\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(\n",
+    "    data=tsne_df,\n",
+    "    x='t-SNE 1',\n",
+    "    y='t-SNE 2',\n",
+    "    hue='bug type',\n",
+    "    palette='Set1',\n",
+    "    alpha=0.7,\n",
+    "    edgecolor='k'\n",
+    ")\n",
+    "\n",
+    "plt.title(\"t-SNE projection of features by bug type\")\n",
+    "plt.xlabel(\"t-SNE 1 (no unit)\")\n",
+    "plt.ylabel(\"t-SNE 2 (no unit)\")\n",
+    "plt.legend(title=\"Bug Type\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.show()"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -498,14 +515,31 @@
    "outputs": [],
    "source": [
     "reducer = umap.UMAP(random_state=0)\n",
-    "umap_projected = reducer.fit_transform(centered_data)\n",
+    "umap_projected = reducer.fit_transform(numeric_df)\n",
     "\n",
-    "plt.figure(figsize=(8,6))\n",
-    "plt.scatter(umap_projected[:, 0], umap_projected[:, 1], color='green', alpha=0.5)\n",
-    "plt.title(\"UMAP projection of features\")\n",
+    "umap_df = pd.DataFrame({\n",
+    "    'UMAP 1': umap_projected[:, 0],\n",
+    "    'UMAP 2': umap_projected[:, 1],\n",
+    "    'bug type': df_class['bug type'].values\n",
+    "})\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(\n",
+    "    data=umap_df,\n",
+    "    x='UMAP 1',\n",
+    "    y='UMAP 2',\n",
+    "    hue='bug type',\n",
+    "    palette='Set2',\n",
+    "    alpha=0.8,\n",
+    "    edgecolor='k'\n",
+    ")\n",
+    "\n",
+    "plt.title(\"UMAP projection of features by bug type\")\n",
     "plt.xlabel(\"UMAP 1\")\n",
     "plt.ylabel(\"UMAP 2\")\n",
+    "plt.legend(title=\"Bug Type\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
